--------------------------------------------------------------------------------------------------
Release notes version 1.8.5_beta : Enhancements, modifications and corrected bugs since version 1.8.4 :
--------------------------------------------------------------------------------------------------
03/05/22 (TRUST)  Major Change: Class and SFINAE templates are introduced to factorize the implementation of TRUST Don fields.
20/04/22 (TRUST)  New feature : Partitionneur_Fichier_MED: allows to split a domain according to an integer field (giving the proc number of each element) stored in a MED file.
07/04/22 (TRUST)  Major Change: TRUST int/double Arrays, Vects, Tabs and Travs are now class templates
01/04/22 (TRUST)  New feature : New implementation of Champ_fonc_tabule_morceaux. Allows to use multiple parameter fields and improve performance.
28/03/22 (TRUST)  Fix         : Champ_front_synt boundary condition had some bugs which are fixed now, parameter p ranamed to KeOverKmin.
28/03/22 (TRUST)  Major Change: Pb_Multiphase can handle arbitrary additional equations (LIST) to handle turbulence modelling
28/03/22 (TRUST)  Major Change: The CoviMAC discretization is improved and leads to more stable results
08/03/22 (TRUST)  Fix         : Keyword Pre_calc_pression crashed under certain circumstancies due to unitialized values of tau_tan
22/02/22 (TRUST)  V&V         : Add new validation forms poiseuille_vdf & cavite_entrainee_2D
22/02/22 (TRUST)  Fix         : It is possible to use now an implicit scheme with the VDF option traitement_coins (necessary for a Poiseuille test case for example)
22/02/22 (TRUST)  Fix         : Coeff/flux implementations are now coherent in the VDF face diffusion operator
22/02/22 (TRUST)  Major Change: The transpose of the velocity gradient is now taken into account in the VDF face diffusion operator (for const/var & lam/turb cases)