@@ -1,0 +1,6 @@
+sonde_pres pression periode 0.01 points 1 0.45 0.45
+sonde_vit vitesse periode 0.01 points 1 0.4 0.45
+sonde_conc concentration periode 0.01 points 1 0.55 0.45
+sonde_seg_gradient gradient_test_concentration periode 0.01 segment 10 0. 0.45 1. 0.45
+sonde_moy_grad Moyenne_gradient_conc_som_dom periode 0.01 points 1 0.8 0.6
+
